# autofin

./: .flake8  .gitignore  README.md  makefile  pyproject.toml
algofin/data/: QQQ.csv
algofin/results/1686444965/: balances.csv  orders.csv
algofin/results/1692479158/: trades.csv
algofin/results/1692556144/: strategy.csv
algofin/results/1692589943/: strategies.csv  trades.csv
algofin/src/: dao.py  objects.py  optimize.py  strategies.py  trading.py  trading_strategies.py
algofin/tests/: test_dao.py  test_strategies.py  test_trading.py
data/: RITM.csv
src/: trading_strategies.py
tests/: test_dao.py  test_strategies.py  test_trading.py
tests/src/: test_dao.py  test_strategies.py  test_trading.py  test_trading_strategies.py  trading_strategies_test.py
tests/src/algofin/results/1692587582/: strategies.csv
